--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <title>Amazona</title>
     </head>
     <body>
@@ -16,11 +17,122 @@
                 </div>
             </header>
             <main>
-                <ul>
-                    <li>Prod1</li>
-                    <li>Prod2</li>
-                    <li>Prod3</li>
-                </ul>
+                <div class="row center">
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star-o"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="product.html">
+                            <!-- image size: 680px by 830px -->
+                            <img class="medium" src = "./images/p1.jpg" alt="product">
+                        </a>
+                        <div class="card-body">
+                            <a href="product.html">
+                                <h2>Nike Slim Shirts</h2>
+                            </a>
+                            <div class="rating">
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star"> </i> </span>
+                                <span> <i class="fa fa-star-half-o"> </i> </span>
+                            </div>
+                            <div class="price">$120</div>
+                        </div>
+                    </div> 
+                </div>
             </main>
             <footer class="row center">All rights reserved</footer>
         </div>
